--- a/localisation/english/focus_l_english.yml
+++ b/localisation/english/focus_l_english.yml
@@ -2377,3 +2377,105 @@
  HUN_dockyards:0 "Renew the Shipping Industry"
  HUN_dockyards_desc:0 "With our sights set firmly on the restoration of our borders, we must begin the task of developing a Mediterranean fleet to rival our past glories."
  if_no_depression_get_stuff_TT:0 "\nIf the §H$CAN_great_depression_1$§! has been removed, a different bonus will be applied.\n\n"
+
+
+ SOV_initial_focus:0 "Here we go"
+ SOV_initial_focus_desc:0 ""
+ SOV_we_have_to_industrialize:0 "We have industrialize..."
+ SOV_we_have_to_industrialize_desc:0 ""
+ SOV_in_under_then_5_years:0 "...in under 5 years..."
+ SOV_in_under_then_5_years_desc:0 ""
+ SOV_otherwise_we-ll_be_stomped:0 "...or we will be stomped!"
+ SOV_otherwise_we-ll_be_stomped_desc:0 ""
+ SOV_we-ll_be_ready:0 "We will be ready!"
+ SOV_we-ll_be_ready_desc:0 ""
+ SOV_ukrain_prom_compleks:0 "Ukranian PromKompleks"
+ SOV_ukrain_prom_compleks_desc:0 ""
+ SOV_ukrain_prom_compleks_one:0 "Donbass"
+ SOV_ukrain_prom_compleks_one_desc:0 ""
+ SOV_ukrain_prom_compleks_two:0 "Cherkasy"
+ SOV_ukrain_prom_compleks_two_desc:0 ""
+ SOV_making_use_of_the_storehouse_of_russia:0 "Russian storehouse"
+ SOV_making_use_of_the_storehouse_of_russia_desc:0 ""
+ SOV_making_use_of_the_storehouse_of_russia_one:0 "Zlatoust"
+ SOV_making_use_of_the_storehouse_of_russia_one_desc:0 ""
+ SOV_making_use_of_the_storehouse_of_russia_two:0 "Magnitogorsk"
+ SOV_making_use_of_the_storehouse_of_russia_two_desc:0 ""
+ SOV_aluminum:0 "Dig aluminum"
+ SOV_aluminum_desc:0 ""
+ SOV_steel:0 "Dig steel"
+ SOV_steel_desc:0 ""
+ SOV_stalin:0 "One man to rule them all"
+ SOV_stalin_desc:0 ""
+ SOV_wipe_out_the_parasites:0 "Wipe out parasites"
+ SOV_wipe_out_the_parasites_desc:0 ""
+ SOV_deploy_gulags:0 "Deploy GULAG"
+ SOV_deploy_gulags_desc:0 ""
+ SOV_kill_trotski:0 "Remove the pain in ass"
+ SOV_kill_trotski_desc:0 ""
+ SOV_ensure_loyatly_of_those_who_left:0 "Ensure loyatly of those who left"
+ SOV_ensure_loyatly_of_those_who_left_desc:0 ""
+ SOV_propaganda:0 "Propaganda"
+ SOV_propaganda_desc:0 ""
+ SOV_scientific_reborn:0 "Scientific reborn"
+ SOV_scientific_reborn_desc:0 ""
+ SOV_rubber:0 "Domestic rubber"
+ SOV_rubber_desc:0 ""
+ SOV_navy_one:0 "Reorganize the junk"
+ SOV_navy_one_desc:0 ""
+ SOV_navy_two:0 "Underwater warfare"
+ SOV_navy_two_desc:0 ""
+ SOV_navy_three:0 "Modern pride of the nation"
+ SOV_navy_three_desc:0 ""
+ SOV_kuznetsovs_plan:0 "Kuznetsov plan"
+ SOV_kuznetsovs_plan_desc:0 ""
+ SOV_forts:0 "Improve forts"
+ SOV_forts_desc:0 ""
+ SOV_military:0 "The Red Army"
+ SOV_military_desc:0 ""
+ SOV_tank_one:0 ""
+ SOV_tank_one_desc:0 "KAMA tank school"
+ SOV_tank_two:0 "Mehkorpusa"
+ SOV_tank_two_desc:0 ""
+ SOV_tank_three:0 "Go with the times"
+ SOV_tank_three_desc:0 ""
+ SOV_tank_four:0 "Project "T-34""
+ SOV_tank_four_desc:0 ""
+ SOV_katusha_one:0 "Katusha"
+ SOV_katusha_one_desc:0 ""
+ SOV_maus:0 "KV-1"
+ SOV_maus_desc:0 ""
+ SOV_start_reorg:0 "STAVKA organisation"
+ SOV_start_reorg_desc:0 ""
+ SOV_arty_one:0 "Artillery One"
+ SOV_arty_one_desc:0 ""
+ SOV_large_calibers:0 "Large calibers"
+ SOV_large_calibers_desc:0 ""
+ SOV_inf_one:0 "Invite German advisors"
+ SOV_inf_one_desc:0 ""
+ SOV_inf_two:0 ""
+ SOV_inf_two_desc:0 ""
+ SOV_new_infantry:0 ""
+ SOV_new_infantry_desc:0 ""
+ SOV_mio_upgrade_1:0 ""
+ SOV_mio_upgrade_1_desc:0 ""
+ SOV_rockets:0 ""
+ SOV_rockets_desc:0 ""
+ SOV_i_16:0 ""
+ SOV_i_16_desc:0 ""
+ SOV_strati:0 ""
+ SOV_strati_desc:0 ""
+ SOV_soveit_airplane_school:0 ""
+ SOV_soveit_airplane_school_desc:0 ""
+ SOV_aviadoka:0 ""
+ SOV_aviadoka_desc:0 ""
+ SOV_back_land_destruction:0 ""
+ SOV_back_land_destruction_desc:0 ""
+ SOV_aluminum_for_planes:0 ""
+ SOV_aluminum_for_planes_desc:0 ""
+ SOV_aviadoka_2:0 ""
+ SOV_aviadoka_2_desc:0 ""
+ SOV_novikov:0 ""
+ SOV_novikov_desc:0 ""
+ SOV_wow:0 ""
+ SOV_wow_desc:0 ""
