--- a/localisation/english/focus_l_english.yml
+++ b/localisation/english/focus_l_english.yml
@@ -2413,7 +2413,7 @@
  SOV_deploy_gulags_desc:0 ""
  SOV_kill_trotski:0 "Remove the pain in ass"
  SOV_kill_trotski_desc:0 ""
- SOV_kill_trotski_tt:0 "Will start a 120 days execution of Leo Trotsky"
+ SOV_kill_trotski_tt:0 "§CWill start a 120 days execution of Leo Trotsky§"
  SOV_ensure_loyatly_of_those_who_left:0 "Ensure loyatly of those who left"
  SOV_ensure_loyatly_of_those_who_left_desc:0 ""
  SOV_propaganda:0 "Propaganda"
@@ -2433,12 +2433,13 @@
  SOV_forts:0 "Improve forts"
  SOV_forts_desc:0 ""
  SOV_the_red_army:0 "The Red Army"
+ SOV_the_red_army_tt:0 "§CWill start a chain of Military Reorganization of 6 debuffs, each of which will be removing one after another every 180 days (in total will take 1080 days = 3 years)§"
  SOV_military_desc:0 ""
  SOV_tank_one:0 "KAMA tank school"
  SOV_tank_one_desc:0 ""
- SOV_tank_two:0 "Mehkorpusa"
+ SOV_tank_two:0 "Cheaper construction"
  SOV_tank_two_desc:0 ""
- SOV_tank_three:0 "Go with the times"
+ SOV_tank_three:0 "Better construction"
  SOV_tank_three_desc:0 ""
  SOV_tank_four:0 "Project "T-34""
  SOV_tank_four_desc:0 ""
