--- a/localisation/english/ideas_l_english.yml
+++ b/localisation/english/ideas_l_english.yml
@@ -2720,3 +2720,13 @@
  SOV_politburo_2:0 "Politburo"
  SOV_gulag:0 "Glavnoe Upravlenie Lageryami"
  SOV_research_facility:0 "Russian Research Facility"
+ SOV_kama_tank_school:0 "KAMA and Lipetsk militaty schools"
+ SOV_mehkorpusa:0 "Mehkorpusa Expansion"
+ SOV_all_union_trainings:0 "All Union Trainings"
+ SOV_stavka:0 "STAVKA High Command"
+ SOV_military_reorg_1:0 "Military Reorganization Stage: 1"
+ SOV_military_reorg_2:0 "Military Reorganization Stage: 2"
+ SOV_military_reorg_3:0 "Military Reorganization Stage: 3"
+ SOV_military_reorg_4:0 "Military Reorganization Stage: 4"
+ SOV_military_reorg_5:0 "Military Reorganization Stage: 5"
+ SOV_military_reorg_6:0 "Military Reorganization Stage: 6"
