--- a/localisation/english/focus_l_english.yml
+++ b/localisation/english/focus_l_english.yml
@@ -2379,56 +2379,56 @@
  if_no_depression_get_stuff_TT:0 "\nIf the §H$CAN_great_depression_1$§! has been removed, a different bonus will be applied.\n\n"
 
 
- SOV_initial_focus:0 "Here we go"
+ SOV_initial_focus:0 "Convene the Politburo"
  SOV_initial_focus_desc:0 ""
  SOV_we_have_to_industrialize:0 "We have industrialize..."
  SOV_we_have_to_industrialize_desc:0 ""
  SOV_in_under_then_5_years:0 "...in under 5 years..."
  SOV_in_under_then_5_years_desc:0 ""
- SOV_otherwise_we-ll_be_stomped:0 "...or we will be stomped!"
+ SOV_otherwise_we-ll_be_stomped:0 "...or be crushed!"
  SOV_otherwise_we-ll_be_stomped_desc:0 ""
  SOV_we-ll_be_ready:0 "We will be ready!"
  SOV_we-ll_be_ready_desc:0 ""
  SOV_ukrain_prom_compleks:0 "Ukranian PromKompleks"
  SOV_ukrain_prom_compleks_desc:0 ""
- SOV_ukrain_prom_compleks_one:0 "Donbass"
+ SOV_ukrain_prom_compleks_one:0 "Expand Donbass Coal Production"
  SOV_ukrain_prom_compleks_one_desc:0 ""
- SOV_ukrain_prom_compleks_two:0 "Cherkasy"
+ SOV_ukrain_prom_compleks_two:0 "Cherkasy Chemical Industry"
  SOV_ukrain_prom_compleks_two_desc:0 ""
  SOV_making_use_of_the_storehouse_of_russia:0 "Russian storehouse"
  SOV_making_use_of_the_storehouse_of_russia_desc:0 ""
- SOV_making_use_of_the_storehouse_of_russia_one:0 "Zlatoust"
+ SOV_making_use_of_the_storehouse_of_russia_one:0 "Zlatoust Machine-Building Plant"
  SOV_making_use_of_the_storehouse_of_russia_one_desc:0 ""
- SOV_making_use_of_the_storehouse_of_russia_two:0 "Magnitogorsk"
+ SOV_making_use_of_the_storehouse_of_russia_two:0 "Magnitogorsk Iron and Steel Works"
  SOV_making_use_of_the_storehouse_of_russia_two_desc:0 ""
- SOV_aluminum:0 "Dig aluminum"
+ SOV_aluminum:0 "Aluminum Refining"
  SOV_aluminum_desc:0 ""
- SOV_steel:0 "Dig steel"
+ SOV_steel:0 "Steel Refining"
  SOV_steel_desc:0 ""
  SOV_stalin:0 "One man to rule them all"
  SOV_stalin_desc:0 ""
  SOV_wipe_out_the_parasites:0 "Wipe out parasites"
  SOV_wipe_out_the_parasites_desc:0 ""
- SOV_deploy_gulags:0 "Deploy GULAG"
+ SOV_deploy_gulags:0 "Establish the GULAG"
  SOV_deploy_gulags_desc:0 ""
  SOV_kill_trotski:0 "Remove the pain in ass"
  SOV_kill_trotski_desc:0 ""
  SOV_kill_trotski_tt:0 "§CWill start a 120 days execution of Leo Trotsky§"
  SOV_ensure_loyatly_of_those_who_left:0 "Ensure loyatly of those who left"
  SOV_ensure_loyatly_of_those_who_left_desc:0 ""
- SOV_propaganda:0 "Propaganda"
+ SOV_propaganda:0 "Agitprop"
  SOV_propaganda_desc:0 ""
- SOV_scientific_reborn:0 "Scientific reborn"
+ SOV_scientific_reborn:0 "Socialist Science"
  SOV_scientific_reborn_desc:0 ""
  SOV_rubber:0 "Domestic rubber"
  SOV_rubber_desc:0 ""
- SOV_navy_one:0 "Rebuild the junk"
+ SOV_navy_one:0 "Rebuild Outdated Ships"
  SOV_navy_one_desc:0 ""
  SOV_navy_two:0 "Underwater warfare"
  SOV_navy_two_desc:0 ""
  SOV_navy_three:0 "Modern pride of the nation"
  SOV_navy_three_desc:0 ""
- SOV_kuznetsovs_plan:0 "Kuznetsov plan"
+ SOV_kuznetsovs_plan:0 "Kuznetsov's plan"
  SOV_kuznetsovs_plan_desc:0 ""
  SOV_forts:0 "Improve forts"
  SOV_forts_desc:0 ""
@@ -2449,9 +2449,9 @@
  SOV_maus_desc:0 ""
  SOV_stavka_organisation:0 "STAVKA organisation"
  SOV_start_reorg_desc:0 ""
- SOV_arty_one:0 "Artillery One"
+ SOV_arty_one:0 "Red God of War"
  SOV_arty_one_desc:0 ""
- SOV_large_calibers:0 "Large calibers"
+ SOV_large_calibers:0 "Larger Calibers"
  SOV_large_calibers_desc:0 ""
  SOV_inf_one:0 "Focus on Infantry"
  SOV_inf_one_desc:0 ""
@@ -2469,9 +2469,9 @@
  SOV_strati_desc:0 ""
  SOV_soveit_airplane_school:0 "Soveit airplane school"
  SOV_soveit_airplane_school_desc:0 ""
- SOV_aviadoka:0 "Aftermathes of Spain"
+ SOV_aviadoka:0 "Lessons from Spain"
  SOV_aviadoka_desc:0 ""
- SOV_back_land_destruction:0 "Back land destruction"
+ SOV_back_land_destruction:0 "Indiscriminate Bombing Policy"
  SOV_back_land_destruction_desc:0 ""
  SOV_aluminum_for_planes:0 "Delta-wood"
  SOV_aluminum_for_planes_desc:0 ""
