--- a/localisation/english/loading_tips_l_english.yml
+++ b/localisation/english/loading_tips_l_english.yml
@@ -4,4 +4,4 @@
  LOADING_TIP_2: "I CANT FIND MY TANKS, THEY ALL HAVE SOME RANDOM LGBTQ COLORS! \n- Victor -"
  LOADING_TIP_3: "What's that command to do focuses? Two letters, isn't it "SS"? \n- Will -"
  LOADING_TIP_4: "Everyone was ruining, except just ME! I did everything perfect! \n- SANJ -"
- LOADING_TIP_5: "JLomka, do not railway my tanks! I'm encircling four soviets! JLOMKA! YOU BLINDMAN!!! ! \n- Leifee -"
+ LOADING_TIP_5: "JLomka, do not railway my tanks! I'm encircling four soviets! JLOMKA! YOU BLINDMAN!!! \n- Leifee -"
