--- a/localisation/english/decisions_l_english.yml
+++ b/localisation/english/decisions_l_english.yml
@@ -285,3 +285,21 @@
   SOV_forts_mojaisk_line_first:0 "Mojaiskata Liniya Oboroni, First Line"
   SOV_forts_mojaisk_line_second:0 "Mojaiskata Liniya Oboroni, Second Line"
   SOV_forts_mojaisk_line_third:0 "Mojaiskata Liniya Oboroni, Third Line"
+
+
+  ic_pp_waste:0 "PP waste section"
+  production_efforts:0 "Production effort"
+  industrialization_efforts:0 "Industrialization effort"
+  research_bonus_effort:0 "Invest in the research"
+  production_effort:0 "Production effort"
+  industrialization_effort:0 "Industrialization effort"
+  invest_in_research:0 "Invest in the research"
+  invest_in_military_staff:0 "invest in the military staff"
+  invest_in_arms_factory:0 "Invest in arms factories"
+  invest_in_arms_factory_desc:0 "Available every 180 days"
+  invest_in_civ_industries:0 "Invest in the civilian factories"
+  invest_in_civ_industries_desc:0 "Available every 180 days"
+  invest_in_shipyards:0 "Invest in the shipyards"
+  shipyard_investment:0 "Shipyard Investment"
+  supply_buildup_cancel:0 "Cancel Logistical Preparations"
+  supply_buildup:0 "Logistical Preparations"
