--- a/localisation/english/decisions_l_english.yml
+++ b/localisation/english/decisions_l_english.yml
@@ -286,8 +286,14 @@
   SOV_forts_mojaisk_line_second:0 "Mojaiskata Liniya Oboroni, Second Line"
   SOV_forts_mojaisk_line_third:0 "Mojaiskata Liniya Oboroni, Third Line"
 
+  ic_helpful_tips:0 "Helpful Tips"
+  SOV_ukrain_promkompleks_tip:0 "Show states affected by Ukrain PromKomplect"
+  SOV_russian_storehouse_tip:0 "Show states affected by Russian Storehouse"
+  SOV_debug:0 "debug thingy for CZE annex"
+
 
   ic_pp_waste:0 "PP waste section"
+  ic_pp_waste_desc:0 "§gThose decisions will help you to waste infinite PP by impoving your industry§"
   production_efforts:0 "Production effort"
   industrialization_efforts:0 "Industrialization effort"
   research_bonus_effort:0 "Invest in the research"
