--- a/localisation/english/traits_l_english.yml
+++ b/localisation/english/traits_l_english.yml
@@ -150,15 +150,19 @@
  air_chief_safety_1:1 "Air Safety\n(Specialist)"
  air_chief_safety_2:1 "Air Safety\n(Expert)"
  air_chief_safety_3:1 "Air Safety\n(Genius)"
+ air_chief_safety_4:1 "Air Safety\n(Esporter)"
  air_chief_night_operations_1:1 "Night Operations\n(Specialist)"
  air_chief_night_operations_2:1 "Night Operations\n(Expert)"
  air_chief_night_operations_3:1 "Night Operations\n(Genius)"
+ air_chief_night_operations_4:1 "Night Operations\n(Esporter)"
  air_chief_ground_support_1:1 "Ground Support\n(Specialist)"
  air_chief_ground_support_2:1 "Ground Support\n(Expert)"
  air_chief_ground_support_3:1 "Ground Support\n(Genius)"
+ air_chief_ground_support_4:1 "Ground Support\n(Esporter)"
  air_chief_all_weather_1:1 "All-Weather\n(Specialist)"
  air_chief_all_weather_2:1 "All-Weather\n(Expert)"
  air_chief_all_weather_3:1 "All-Weather\n(Genius)"
+ air_chief_all_weather_4:1 "All-Weather\n(Esporter)"
  air_chief_old_guard:0 "Old Guard"
  air_air_combat_training_1:1 "Air Combat Training\n(Specialist)"
  air_air_combat_training_2:1 "Air Combat Training\n(Expert)"
@@ -169,15 +173,18 @@
  air_bomber_interception_1:1 "Bomber Interception\n(Specialist)"
  air_bomber_interception_2:1 "Bomber Interception\n(Expert)"
  air_bomber_interception_3:1 "Bomber Interception\n(Genius)"
+ air_bomber_interception_4:1 "Bomber Interception\n(Esporter)"
  air_air_superiority_1:1 "Air Superiority\n(Specialist)"
  air_air_superiority_2:1 "Air Superiority\n(Expert)"
  air_air_superiority_3:1 "Air Superiority\n(Genius)"
+ air_air_superiority_4:1 "Air Superiority\n(Esporter)"
  air_close_air_support_1:1 "Close Air Support\n(Specialist)"
  air_close_air_support_2:1 "Close Air Support\n(Expert)"
  air_close_air_support_3:1 "Close Air Support\n(Genius)"
  air_strategic_bombing_1:1 "Strategic Bombing\n(Specialist)"
  air_strategic_bombing_2:1 "Strategic Bombing\n(Expert)"
  air_strategic_bombing_3:1 "Strategic Bombing\n(Genius)"
+ air_strategic_bombing_4:1 "Strategic Bombing\n(Esporter)"
  air_tactical_bombing_1:1 "Tactical Bombing\n(Specialist)"
  air_tactical_bombing_2:1 "Tactical Bombing\n(Expert)"
  air_tactical_bombing_3:1 "Tactical Bombing\n(Genius)"
