--- a/localisation/english/traits_l_english.yml
+++ b/localisation/english/traits_l_english.yml
@@ -1594,3 +1594,7 @@
  JUNO_mayor_of_the_city_of_asuncion: "Mayor of the City of Asunción"
  JUNO_emergency_powers: "Wielder of Emergency Powers"
  JUNO_uruguyan_revisionist: "Uruguayan Revisionist"
+
+
+
+ popular_figurehead_kalinin:0 "Communist mass organiser"
