--- a/localisation/english/unit_l_english.yml
+++ b/localisation/english/unit_l_english.yml
@@ -326,6 +326,7 @@
  medium_armor_desc:0 "Medium tanks are flexible and can do almost any job."
  heavy_armor:0 "Heavy Tank"
  heavy_armor_desc:0 "The strongest tanks with powerful armor and weapons, but slow and tactically inflexible."
+ heavy_armor_brigade:0 "Heavy Tank Support"
  super_heavy_armor:0 "Super-Heavy Tank"
  motorized:0 "Motorized Infantry"
  motorized_desc:0 "Motorized infantry transportation, such as trucks and motorcycles."
@@ -451,6 +452,7 @@
  category_support_battalions:1 "Support Companies"
  category_all_armor:0 "Tanks & Armor Variants"
  category_tanks:0 "Tanks"
+ category_support_tanks:0 "Support Tanks"
  category_army:0 "Army"
  category_recon:0 "Recon"
  category_line_artillery:0 "Line Artillery"
