--- a/localisation/replace/vanilla_modifiericons_l_english.yml
+++ b/localisation/replace/vanilla_modifiericons_l_english.yml
@@ -204,6 +204,7 @@
  MODIFIER_AIR_SUPERIORITY_FACTOR:0 "£air_superiority_texticon  Air Superiority"
  MODIFIER_AIR_SUPERIORITY:0 "£air_superiority_texticon  Air Superiority"
  MODIFIER_CONSUMER_GOODS_FACTOR:0 "£consumer_goods_texticon  Consumer Goods Factories factor"
+ MODIFIER_CONSUMER_GOODS_EXPECTED_VALUE:0 "£consumer_goods_texticon  Consumer Goods"
  MODIFIER_AIR_ATTACK:0 "£attack_air_texticon  Air Attack"
  MODIFIER_AIR_ATTACK_FACTOR:0 "£attack_air_texticon  Air Attack"
  MODIFIER_AIR_DEFENCE:0 "£defence_air_texticon  Air Defense"
