--- a/localisation/replace/vanilla_modifiericons_l_russian.yml
+++ b/localisation/replace/vanilla_modifiericons_l_russian.yml
@@ -208,6 +208,7 @@
  MODIFIER_AIR_SUPERIORITY_FACTOR:0 "£air_superiority_texticon  Превосходство в воздухе"
  MODIFIER_AIR_SUPERIORITY:0 "£air_superiority_texticon  Превосходство в воздухе"
  MODIFIER_CONSUMER_GOODS_FACTOR:0 "£consumer_goods_texticon  Фактор фабрик, производящих товары народного потребления"
+ MODIFIER_CONSUMER_GOODS_EXPECTED_VALUE:0 "£consumer_goods_texticon  ТНП ёпта"
  MODIFIER_AIR_ATTACK:0 "£attack_air_texticon  Воздушная атака"
  MODIFIER_AIR_ATTACK_FACTOR:0 "£attack_air_texticon  Воздушная атака"
  MODIFIER_AIR_DEFENCE:0 "£defence_air_texticon  Противовоздушная оборона"
