first region done

--- a/localisation/english/strategic_region_names_l_english.yml
+++ b/localisation/english/strategic_region_names_l_english.yml
@@ -285,5 +285,5 @@
  STRATEGICREGION_284:0 "Southern Andes"
  STRATEGICREGION_285:0 "Rio Tocantins"
  STRATEGICREGION_286:0 "Rio Grande do Norte"
- STRATEGICREGION_287: "Bolivia"
- STRATEGICREGION_288: "Central Brazil"
+ STRATEGICREGION_287:-1 "Bolivia"
+ STRATEGICREGION_288:-1 "Central Brazil"
