--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -3,6 +3,8 @@
  VICTORY_POINTS_6521:0 "Berlin"
  VICTORY_POINTS_692:0 "Munich"
  VICTORY_POINTS_6469:0 "Essen"
+ VICTORY_POINTS_564:0 "Kassel"
+ VICTORY_POINTS_3692:0 "Freiburg"
  VICTORY_POINTS_9347:0 "Hamburg"
  VICTORY_POINTS_9570:0 "Breslau"
  VICTORY_POINTS_241:0 "Wilhelmshaven"
