--- a/localisation/english/decisions_l_english.yml
+++ b/localisation/english/decisions_l_english.yml
@@ -338,6 +338,9 @@
 
 
 
+  GER_core_new_territories_category:0 "§Y1000 YEARS REICH§!"
+  GER_add_netherlands_to_the_reich:0 "Add Belguim to the Reich"
+  GER_add_belgium_to_the_reich:0 "Add Belguim to the Reich"
 
 
   GER_prep_for_barb_category:0 "§OOPERATION §R"BARBAROSSA"§! PREPARATIONS§!"
