--- a/localisation/english/focus_l_english.yml
+++ b/localisation/english/focus_l_english.yml
@@ -2487,3 +2487,40 @@
  SOV_novikov_desc:0 ""
  SOV_wow:0 "Great Patriotic War"
  SOV_wow_desc:0 ""
+
+
+ GER_initial_focus:0 "Rhineland Remilitarization"
+ GER_versailles_break_down:0 "Break Versailles Bonds"
+ GER_nation_zombification:0 "Nation Zombification"
+ GER_get_mefo_bills:0 "Found MEFO"
+ GER_deal_with_krupp:0 "Deal with Krupp"
+ GER_extra_sponsorship:0 "Extra Sponsorship"
+ GER_all_for_the_reich:0 "All for the Reich"
+ GER_ic_autobahn:0 "Autobahn"
+ GER_factories_one:0 "BMW"
+ GER_old_german_working_culture:0 "Old German Working Culture"
+ GER_factories_two:0 "Central Germany Development"
+ GER_rubber:0 "Rubber"
+ GER_general_mobilization:0 "General Mobilization"
+ GER_luftwaffe:0 "Luftwaffe"
+ GER_ju_87_stuka:0 "Ju-87 "Stuka""
+ GER_ural_bomber:0 "Ural Bomber"
+ GER_focke_wulf:0 "FockeWulf"
+ GER_bf_109_improvements:0 "BF-109 Improvements"
+ GER_wehrmacht:0 "Wehrmacht"
+ GER_kriegsmarine:0 "Kriegsmarine"
+ GER_subs:0 "UBoats"
+ GER_heavy_ships:0 "Onwater Fleet"
+ GER_sov_schools:0 "KAMA tank school"
+ GER_blumen_kriege:0 "Blumen Kriege"
+ GER_army_expansion:0 "Army Expansion"
+ GER_panzerwaffe:0 "Panzerwaffe"
+ GER_sturmgeshutz:0 "Sturmgeschütz III"
+ GER_tiger:0 "Pzkpfw VI Tiger I"
+ GER_army_expansion_two:0 "Army Expansion 2"
+ GER_cheap_civilian_radios:0 "Cheap Civilian Radios"
+ GER_proclaim_german_supremacy:0 "Proclaim German Supremacy"
+ GER_anshluss:0 "Anschluß"
+ GER_sudetenland:0 "Sudetenland"
+ GER_cze_annex:0 "Fate of Czechoslovakia"
+ GER_expand_lebensraum:0 "Expand Lebensraum"
