--- a/localisation/english/decisions_l_english.yml
+++ b/localisation/english/decisions_l_english.yml
@@ -338,9 +338,22 @@
 
 
 
-  GER_core_new_territories_category:0 "§Y1000 YEARS REICH§!"
-  GER_add_netherlands_to_the_reich:0 "Add Belguim to the Reich"
+  GER_thousand_year_reich_category:0 "§YTHOUSAND-YEAR REICH§!"
+  GER_thousand_year_reich_category_desc:0 "§gThis decisions will help you build, manage, improve your Reich§!"
+  GER_appoint_fireman:0 "Urgently call Walter Model to the Headquarters"
+  GER_retake_what_kaiser_lost:0 "Retake what Kaiser Lost"
+  GER_add_denmark_to_the_reich:0 "Add Denmark to the Reich"
+  GER_add_netherlands_to_the_reich:0 "Add Netherlands to the Reich"
   GER_add_belgium_to_the_reich:0 "Add Belguim to the Reich"
+  GER_alsace_lorraine_integration:0 "Alsace-Lorraine Integration"
+  GER_set_up_bordeaux_naval_bases:0 "Set up Bordeaux Naval Bases"
+  GER_france_industrial_relocation_one:0 "France Industry Relocation: 1"
+  GER_france_industrial_relocation_two:0 "France Industry Relocation: 2"
+  GER_france_industrial_relocation_three:0 "France Industry Relocation: 3"
+  GER_france_industrial_relocation_four:0 "France Industry Relocation: 4"
+  GER_france_industrial_relocation_five:0 "France Industry Relocation: 5"
+  GER_france_industrial_relocation_six:0 "France Industry Relocation: 6"
+  GER_prepare_france_for_fighting:0 "Festung Frankreich"
 
 
   GER_prep_for_barb_category:0 "§OOPERATION §R"BARBAROSSA"§! PREPARATIONS§!"
