--- a/localisation/english/traits_l_english.yml
+++ b/localisation/english/traits_l_english.yml
@@ -1605,3 +1605,4 @@
  navy_chief_commerce_raiding_4:0 "Commerce Raiding\n(Esporter)"
  A_nuclear_scientist_but_crazy:0 "Nuclear scientist (crazy one)"
  minister_of_proparanda:0 "Minister of propaganda"
+ fuhrers_fireman:0 "Fuhrers Fireman"
