--- a/localisation/english/focus_l_english.yml
+++ b/localisation/english/focus_l_english.yml
@@ -2509,6 +2509,7 @@
  GER_bf_109_improvements:0 "BF-109 Improvements"
  GER_wehrmacht:0 "Wehrmacht"
  GER_kriegsmarine:0 "Kriegsmarine"
+ GER_navy_planes:0 "Navaly Designed Planes"
  GER_subs:0 "UBoats"
  GER_heavy_ships:0 "Onwater Fleet"
  GER_sov_schools:0 "KAMA tank school"
