--- a/localisation/english/focus_l_english.yml
+++ b/localisation/english/focus_l_english.yml
@@ -2501,6 +2501,7 @@
  GER_old_german_working_culture:0 "Old German Working Culture"
  GER_factories_two:0 "Central Germany Development"
  GER_rubber:0 "Rubber"
+ GER_rubber_2:0 "Rubber 2"
  GER_general_mobilization:0 "General Mobilization"
  GER_luftwaffe:0 "Luftwaffe"
  GER_ju_87_stuka:0 "Ju-87 "Stuka""
