--- a/localisation/english/focus_l_english.yml
+++ b/localisation/english/focus_l_english.yml
@@ -2500,6 +2500,8 @@
  GER_factories_one:0 "BMW"
  GER_old_german_working_culture:0 "Old German Working Culture"
  GER_factories_two:0 "Central Germany Development"
+ GER_silesian_industrial_region_one:0 "Direct investments into Silesia"
+ GER_silesian_industrial_region_two:0 "Improve Silesian industrial infrastructure"
  GER_rubber:0 "Rubber"
  GER_rubber_2:0 "Rubber 2"
  GER_general_mobilization:0 "General Mobilization"
@@ -2522,7 +2524,21 @@
  GER_army_expansion_two:0 "Army Expansion 2"
  GER_cheap_civilian_radios:0 "Cheap Civilian Radios"
  GER_proclaim_german_supremacy:0 "Proclaim German Supremacy"
+ GER_the_question:0 "The Question"
  GER_anshluss:0 "Anschluß"
  GER_sudetenland:0 "Sudetenland"
  GER_cze_annex:0 "Fate of Czechoslovakia"
  GER_expand_lebensraum:0 "Expand Lebensraum"
+
+ GER_battle_for_england:0 "Battle for England"
+ GER_unsere_rommel:0 "Unsere Rommel"
+ GER_fra_cap:0 "Der Sieg ist unser!"
+ GER_silesian_industrial_region_2:0 "Second Industrial Heart of Germany"
+ GER_rubber_3:0 "Rubber 3"
+ GER_ss_regiments:0 "SS Regiments"
+ GER_get_them_milzz:0 "Get them Milzz"
+ GER_aa_defences_of_life_important_industry:0 "AA Defences of Life Important Industry"
+ GER_aa_defences_of_remnants_of_the_reich:0 "AA Defences of Remnants of the Reich"
+ GER_new_main_tank:0 "New Main Tank"
+ GER_symbol_of_the_blitzkrieg:0 "Symbol of the Blitzkrieg"
+ GER_change_direction:0 "Change Direction"
