--- a/localisation/english/ideas_l_english.yml
+++ b/localisation/english/ideas_l_english.yml
@@ -2756,6 +2756,7 @@
  ic_nation_zombification_4:0 "RMVP"
  ic_stuka:0 "Achtung Stuka!"
  ic_ural_bomber:0 "Ural Bomber"
+ ic_ural_bomber_programm:0 "Building heavy bombers require some investments"
  ic_gray_wolf:0 "§gGray Wolf's in Den§!"
  ic_gray_wolf_golden_times:0 "§gGray Wolf: §YGolden Times!§!§!"
  ic_gray_wolf_its_over:0 "§gGray Wolf tucked its tail§!"
