--- a/localisation/replace/vanilla_modifiericons_l_english.yml
+++ b/localisation/replace/vanilla_modifiericons_l_english.yml
@@ -400,8 +400,8 @@
  MODIFIER_AIR_AGILITY_NIGHT_FACTOR_DESC:0 "Air Agility during night."
  MODIFIER_ARMY_BONUS_AIR_SUPERIORITY:1 "£army_air_superiority_texticon  Air Superiority"
  MODIFIER_ARMY_BONUS_AIR_SUPERIORITY_DESC:1 "Friendly Air Superiority effect on enemy divisions."
- MODIFIER_ARMY_BONUS_AIR_SUPERIORITY_FACTOR:1 "£army_air_superiority_texticon  Air Superiority"
- MODIFIER_ENEMY_ARMY_BONUS_AIR_SUPERIORITY_FACTOR:0 "£enemy_air_superiority_texticon  Enemy Air Support"
+ MODIFIER_ARMY_BONUS_AIR_SUPERIORITY_FACTOR:1 "£army_air_superiority_texticon  Air Superiority in-battle effect"
+ MODIFIER_ENEMY_ARMY_BONUS_AIR_SUPERIORITY_FACTOR:0 "£enemy_air_superiority_texticon  Air Superiority in-battle effect"
  MODIFIER_ENEMY_ARMY_BONUS_AIR_SUPERIORITY_FACTOR_DESC:0 "Enemy air superiority effect on our divisions."
  MODIFIER_ARMY_BONUS_AIR_SUPERIORITY_FACTOR_DESC:1 "Friendly Air Superiority effect on enemy divisions."
  MODIFIER_NAVY_ANTI_AIR_TARGETTING:0 "£anti_air_gun_texticon  Naval AA targeting"
