--- a/localisation/english/ideas_l_english.yml
+++ b/localisation/english/ideas_l_english.yml
@@ -2754,6 +2754,7 @@
  ic_nation_zombification_2:0 "RMVP"
  ic_nation_zombification_3:0 "RMVP"
  ic_nation_zombification_4:0 "RMVP"
+ ic_ss_idea:0 "SS"
  ic_stuka:0 "Achtung Stuka!"
  ic_ural_bomber:0 "Ural Bomber"
  ic_ural_bomber_programm:0 "Building heavy bombers require some investments"
