--- a/localisation/english/focus_l_english.yml
+++ b/localisation/english/focus_l_english.yml
@@ -2530,15 +2530,25 @@
  GER_cze_annex:0 "Fate of Czechoslovakia"
  GER_expand_lebensraum:0 "Expand Lebensraum"
 
+ GER_air_innovations:0 "Air Innovations"
  GER_battle_for_england:0 "Battle for England"
+ GER_high_individual_scores:0 "High Individual Scores"
  GER_unsere_rommel:0 "Unsere Rommel"
  GER_fra_cap:0 "Der Sieg ist unser!"
  GER_silesian_industrial_region_2:0 "Second Industrial Heart of Germany"
  GER_rubber_3:0 "Rubber 3"
  GER_ss_regiments:0 "SS Regiments"
+ ic_GER_army_innovation:0 "Army Innovation"
  GER_get_them_milzz:0 "Get them Milzz"
  GER_aa_defences_of_life_important_industry:0 "AA Defences of Life Important Industry"
  GER_aa_defences_of_remnants_of_the_reich:0 "AA Defences of Remnants of the Reich"
  GER_new_main_tank:0 "New Main Tank"
  GER_symbol_of_the_blitzkrieg:0 "Symbol of the Blitzkrieg"
  GER_change_direction:0 "Change Direction"
+ GER_drang_nach_osten:0 "Drang Nach Osten"
+ GER_plan_ost:0 "General-Plan "OST""
+ GER_blitzkrieg_stalls:0 "Blitzkrieg Stalls"
+ GER_oops_forgor_winter_equip:0 "Oops Forgor Winter Equip"
+ GER_barbarossa_first_succeses:0 "Barbarossa First Succeses"
+ GER_barbarossa_moderate_succeses:0 "Barbarossa Moderate Succeses"
+ GER_barbarossa_big_succeses:0 "Barbarossa Big Succeses"
