--- a/localisation/english/traits_l_english.yml
+++ b/localisation/english/traits_l_english.yml
@@ -147,6 +147,7 @@
  air_chief_reform_1:1 "Air Reformer\n(Specialist)"
  air_chief_reform_2:1 "Air Reformer\n(Expert)"
  air_chief_reform_3:1 "Air Reformer\n(Genius)"
+ air_chief_reform_4:1 "Air Reformer\n(Esporter)"
  air_chief_safety_1:1 "Air Safety\n(Specialist)"
  air_chief_safety_2:1 "Air Safety\n(Expert)"
  air_chief_safety_3:1 "Air Safety\n(Genius)"
