--- a/localisation/english/ic_events_l_english.yml
+++ b/localisation/english/ic_events_l_english.yml
@@ -15,3 +15,10 @@
  ic_faq_events.4.d:0 "Here is a guide to be"
  ic_faq_events.4.a:0 "mkay"
  
+
+
+ ic_news.1.t:0 "German Scout planes Detected at Soviet Airspace"
+ ic_news.1.d:0 "dap dap"
+ ic_news.1.a:0 "I guess they just wann know their friends close..."
+ ic_news.1.b:0 "Doesnt have to be SO loud!"
+ ic_news.1.c:0 "Take it easy, we dont want war!"
