--- a/localisation/english/decisions_l_english.yml
+++ b/localisation/english/decisions_l_english.yml
@@ -385,3 +385,10 @@
   GER_barb_category:0 "§OOPERATION §R"BARBAROSSA"§!"
   GER_send_scout_planes:0 "Kommando Rowehl (start of preparations)"
   GER_send_scout_planes_mission:0 "§YOur spy planes are collecting info on USSR§!"
+  GER_blitzkrieg_mission:0 "Blitz them up!"
+  GER_prep_1:0 "Prepare Air Fields"
+  GER_prep_1_mission:0 "Preparing Air Fields"
+  GER_prep_2:0 "Prepare Railroads"
+  GER_prep_2_mission:0 "Prepaing Railroads"
+  GER_prep_3:0 "Prepare idk_what_yet"
+  GER_prep_3_mission:0 "Preparing idk_what_yet"
