attempt to fix ger focuses dissapearing on adding vanilla focuses

--- a/localisation/english/focus_l_english.yml
+++ b/localisation/english/focus_l_english.yml
@@ -2538,7 +2538,7 @@
  GER_silesian_industrial_region_2:0 "Second Industrial Heart of Germany"
  GER_rubber_3:0 "Rubber 3"
  GER_ss_regiments:0 "SS Regiments"
- ic_GER_army_innovation:0 "Army Innovation"
+ ic_GER_army_modernization:0 "Army Modernization"
  GER_get_them_milzz:0 "Get them Milzz"
  GER_aa_defences_of_life_important_industry:0 "AA Defences of Life Important Industry"
  GER_aa_defences_of_remnants_of_the_reich:0 "AA Defences of Remnants of the Reich"
