levitan fixes and sov_wow focus lock on has_war_with = GER

--- a/localisation/english/traits_l_english.yml
+++ b/localisation/english/traits_l_english.yml
@@ -1599,6 +1599,7 @@
 
 
  popular_figurehead_kalinin:0 "Communist mass organiser"
+ stalins_horn:0 "Stalins Translator"
  navy_chief_kuznetsov:0 "Narodniy Komisar Flota"
  USA_marines:0 "USA Marines"
  The_old_sailor:0 "The Old Sailor"
