--- a/localisation/english/traits_l_english.yml
+++ b/localisation/english/traits_l_english.yml
@@ -1597,7 +1597,7 @@
  JUNO_uruguyan_revisionist: "Uruguayan Revisionist"
 
 
-
+ stalin_eblan:0 "Inflexible Politic"
  popular_figurehead_kalinin:0 "Communist mass organiser"
  stalins_horn:0 "Stalins Translator"
  navy_chief_kuznetsov:0 "Narodniy Komisar Flota"
