sov evacuation now exists

--- a/localisation/english/loading_tips_l_english.yml
+++ b/localisation/english/loading_tips_l_english.yml
@@ -7,3 +7,4 @@
  LOADING_TIP_5: "JLomka, do not railway my tanks! I'm encircling four soviets! JLOMKA! YOU BLINDMAN!!! \n- Leifee -"
  LOADING_TIP_6: "BOITES. MI. IDEM."
  LOADING_TIP_7: "You guys lost Afrika in two month, LOL\n- Khan Faso -"
+ LOADING_TIP_8: "Everyone's gangsta untill Russia hits MASSPRODUCTION."
