--- a/localisation/english/ideas_l_english.yml
+++ b/localisation/english/ideas_l_english.yml
@@ -2761,3 +2761,10 @@
  ic_gray_wolf:0 "§gGray Wolf's in Den§!"
  ic_gray_wolf_golden_times:0 "§gGray Wolf: §YGolden Times!§!§!"
  ic_gray_wolf_its_over:0 "§gGray Wolf tucked its tail§!"
+ ic_GER_mobilize_reich:0 "Mobilize Reich"
+ ic_ger_barbarossa:0 "Operation: Barbarossa"
+ ic_ger_barb_stall_1:0 "Blitzkrieg stalls!"
+ ic_ger_barb_stall_2:0 "Blitzkrieg stalls!"
+ ic_ger_barb_stall_3:0 "Blitzkrieg stalls: 1942 Summer Offencive Failed"
+ ic_aim_moscau_idea:0 "1942 Summer Offencive on Moscau"
+ ic_aim_stalingrad_idea:0 "1942 Summer Offencive on Stalingrad"
